Bug 154476 - "Wrong" default shortcuts for zooming print preview in Writer
Summary: "Wrong" default shortcuts for zooming print preview in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.1.2 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-30 13:11 UTC by Andreas Säger
Modified: 2023-04-04 13:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Säger 2023-03-30 13:11:58 UTC
Description:
In Writer's print preview + zooms out and - zooms in. 

Steps to Reproduce:
1. Reset profile to factory settings.
2. Start Writer, get print preview
3. Play with + and - keys

Actual Results:
+ zooms out
- zooms in

Expected Results:
+ zooms in
- zooms out


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: x11
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 Rafael Lima 2023-03-30 18:02:48 UTC
Reproduced

Indeed the shortcuts are inverted.

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.1~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded
Comment 2 Commit Notification 2023-04-04 13:37:46 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a9cf7e8b23a0223eb2f5e0ed28bd012551836867

tdf#154476 Fix accelerators in Print preview

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.