tdf#154476 Fix accelerators in Print preview

As reported in the bug ticket, the +/- accelerators are inverted.

Change-Id: Iafd648968ce8c3c2f461f31b65b1bd4bf85f1dab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149701
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>